--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "chai": "^3.5.0",
     "chai-http": "^3.0.0",
     "express": "^4.15.2",
+    "jquery": "^3.2.1",
     "md5": "^2.2.1",
     "mocha": "^3.2.0"
   }
