--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "body-parser": "^1.17.1",
     "chai": "^3.5.0",
     "chai-http": "^3.0.0",
+    "chai-jquery": "^2.0.0",
     "express": "^4.15.2",
     "jquery": "^3.2.1",
     "md5": "^2.2.1",
