--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.15.2",
     "jquery": "^3.2.1",
     "md5": "^2.2.1",
-    "mocha": "^3.2.0"
+    "mocha": "^3.2.0",
+    "mocha-jsdom": "^1.1.0"
   }
 }
